--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,11 @@
 fieldLabel.roleId          = Role Id
 fieldLabel.roleName        = Role Name
 fieldLabel.roledescription  = Role Description
+fieldLabel.leaveTypeId      = Id
+fieldLabel.leaveTypeRoleName      = Role Name
+fieldLabel.leaveTypeName    = Leave Type
+fieldLabel.leaveTypeentitledNum = No. of Days
+fieldLabel.leaveTypeRoleName = Role Name
 
 
 
@@ -15,3 +20,6 @@ caption.detail         = Detail
 error.role.roleid.empty               = The "Role Id" field cannot be empty. 
 error.role.name.empty                 = The "Role Name" field cannot be empty.
 error.role.description.empty          = The "Role Description" field cannot be empty.
+error.leaveType.leaveTypeId.empty	  = The LeaveType field cannot be empty
+error.leaveType.name.empty            = The LeaveType field cannot be empty
+error.leaveType.entitledNum.empty     = The LeaveType field cannot be empty
